--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,7 @@
             media="(prefers-color-scheme: dark)"
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <title>El Blog de Pablo Portas López</title>
     </head>
     <body>
@@ -29,5 +30,12 @@
         margin: 0;
         width: 100%;
         height: 100%;
+        background-color: #ffffff;
+    }
+    @media (prefers-color-scheme: dark) {
+        html,
+        body {
+            background-color: #0f172a;
+        }
     }
 </style>
