--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,12 +7,12 @@
         <meta name="generator" content={Astro.generator} />
         <meta
             name="theme-color"
-            content="#ffffff"
+            content="#fecaca"
             media="(prefers-color-scheme: light)"
         />
         <meta
             name="theme-color"
-            content="#0f172a"
+            content="#991b1b"
             media="(prefers-color-scheme: dark)"
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -23,19 +23,3 @@
         <slot />
     </body>
 </html>
-
-<style>
-    html,
-    body {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #ffffff;
-    }
-    @media (prefers-color-scheme: dark) {
-        html,
-        body {
-            background-color: #0f172a;
-        }
-    }
-</style>
