--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,23 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
+    <Background />
     <WorkInProgress />
     <Obrero />
-    <Background />
 </Layout>
+
+<style>
+    html,
+    body {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        background: #ffffff;
+    }
+    @media (prefers-color-scheme: dark) {
+        html,
+        body {
+            background: #0f172a;
+        }
+    }
+</style>
