--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,10 @@ import Layout from "../layouts/Layout.astro";
     html,
     body {
         margin: 0;
+        padding: 0;
         width: 100%;
         height: 100%;
+        overflow: hidden;
         background: #ffffff;
     }
     @media (prefers-color-scheme: dark) {
