--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,5 @@
 ---
-import Obrero from "../components/Obrero.astro";
-import WorkInProgress from "../components/WorkInProgress.astro";
-import Background from "../components/Background.astro";
-import Layout from "../layouts/Layout.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout>
-    <WorkInProgress />
-    <Obrero />
-    <Background />
-</Layout>
+<Layout />
