--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -23,18 +23,23 @@ const coverImagePath = `/src/assets/blogimages/${post.slug}/cover.jpg`
 				src={blogImages[coverImagePath]()}
 				alt={post.data.title}
 				class="object-cover rounded-xl aspect-video"
+				transition:name={`blog-cover-${post.slug}`}
 			/>
 		)
 	}
 	<h4
 		class="text-2xl font-semibold group-hover:text-primary dark:group-hover:text-primary-dark group-hover:underline transition-colors"
+		transition:name={`blog-title-${post.slug}`}
 	>
 		{post.data.title}
 	</h4>
 	<p class="line-clamp-3 opacity-80">
 		{post.data.description}
 	</p>
-	<p class="uppercase text-sm mt-auto tracking-tight">
+	<p
+		class="uppercase text-sm mt-auto tracking-tight"
+		transition:name={`blog-date-${post.slug}`}
+	>
 		<FormattedDate date={post.data.pubDate} />
 	</p>
 </a>
