refactor: use typescript paths

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import { SITE_BASE, SocialLinks, WebsiteLinks } from '../consts'
-import LogoSVG from '../assets/logo.svg'
+import { SITE_BASE, SocialLinks, WebsiteLinks } from '@/consts'
+import LogoSVG from '@/assets/logo.svg'
 import { Icon } from 'astro-icon/components'
 
 const today = new Date()
