--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
-import { SITE_BASE } from '../consts'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+import { SITE_BASE } from '@/consts'
 ---
 
 <BaseLayout>
