--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
-import { SITE_BASE, SocialLinks } from '../consts'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+import { SITE_BASE, SocialLinks } from '@/consts'
 import { Icon } from 'astro-icon/components'
-import BlogCard from '../components/BlogCard.astro'
+import BlogCard from '@/components/BlogCard.astro'
 import { getCollection } from 'astro:content'
 
 const posts = (await getCollection('blog'))
