--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE_BASE } from '@/consts'
-import '../styles/global.css'
+import '@/styles/global.css'
 import { ClientRouter } from 'astro:transitions'
 
 interface Props {
