--- a/src/components/NavbarLink.astro
+++ b/src/components/NavbarLink.astro
@@ -16,7 +16,7 @@ const isActive =
 	<slot />
 </a>
 <style>
-	@reference "../styles/global.css";
+	@reference "@/styles/global.css";
 
 	a {
 		@apply underline-offset-4 hover:underline relative decoration-2;
