--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -48,7 +48,7 @@ const { class: className } = Astro.props
 </div>
 
 <style>
-	@reference "../styles/global.css";
+	@reference "@/styles/global.css";
 
 	button.theme-button {
 		@apply p-1 rounded-full duration-0;
