--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from 'astro:content'
-import FormattedDate from '../components/FormattedDate.astro'
+import FormattedDate from '@/components/FormattedDate.astro'
 import type { MarkdownHeading, ImageMetadata } from 'astro'
-import TableOfContents from '../components/TableOfContents.astro'
+import TableOfContents from '@/components/TableOfContents.astro'
 import dayjs from 'dayjs'
 import utc from 'dayjs/plugin/utc'
 
