--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content'
-import BlogCard from '../../components/BlogCard.astro'
-import BaseLayout from '../../layouts/BaseLayout.astro'
+import BlogCard from '@/components/BlogCard.astro'
+import BaseLayout from '@/layouts/BaseLayout.astro'
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
