--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro'
+import Layout from '@/layouts/Base.astro'
 ---
 
-<BaseLayout>
+<Layout>
 	<main class="app-container pt-36">
 		<h1 class="text-6xl pb-2 font-bold">About Me</h1>
 	</main>
@@ -74,4 +74,4 @@ import BaseLayout from '@/layouts/BaseLayout.astro'
 			</p>
 		</div>
 	</section>
-</BaseLayout>
+</Layout>
